fixed a massive misalignment I did not see. Not sure where it came from but I must have pasted in some CSS where I didn't mean to.

--- a/css/index.css
+++ b/css/index.css
@@ -273,22 +273,6 @@ button:hover {
   }
 }
 
-.services {
-	margin-top: 40px;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	height: 1200px;
-}
-
-@media (max-width: 1000px) {
-	.services {
-		flex-direction: column;
-		height: 2400px;
-	}
-}
-
 .servicebox {
 	width: 575px;
 	height: 350px;
